<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_margin="@dimen/_12sdp"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="data"
            type="com.android.aloapp.api.models.response.GameBean"/>

    </data>

    <androidx.cardview.widget.CardView
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:id="@+id/game"
        app:cardElevation="@dimen/_3sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_12sdp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/constraintLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/darkBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.cardview.widget.CardView
                app:layout_constraintBottom_toTopOf="@+id/viewSep"
                android:layout_margin="@dimen/_8sdp"
                android:id="@+id/cardView"
                android:layout_width="@dimen/_110sdp"
                android:layout_height="@dimen/_160sdp"
                app:cardCornerRadius="@dimen/_8sdp"
                app:cardElevation="@dimen/_3sdp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:scaleType="fitXY"
                    android:id="@+id/imgGames"
                    loadImage="@{data.image}"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:contentDescription="@string/img_games_des" />

            </androidx.cardview.widget.CardView>


            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/_8sdp"
                android:layout_marginTop="@dimen/_12sdp"
                android:layout_marginRight="@dimen/_8sdp"
                app:layout_constraintStart_toEndOf="@+id/cardView"
                app:layout_constraintTop_toTopOf="parent">

                <ImageView
                    android:tint="@color/paleLavender"
                    android:id="@+id/movieIcon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:contentDescription="@string/img_movie_des"
                    android:src="@drawable/ic_joystick" />

                <TextView
                    android:id="@+id/movieName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/_4sdp"
                    android:layout_marginTop="@dimen/_2sdp"
                    android:layout_toRightOf="@+id/movieIcon"
                    android:fontFamily="@font/avenir_next_bold"
                    android:text="@{data.title}"
                    android:textColor="@color/md_yellow_500"
                    android:textSize="@dimen/_13ssp"
                    tools:text="@string/movie_name_text" />

                <ImageView
                    android:tint="@color/paleLavender"
                    android:id="@+id/desIcon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_below="@+id/movieIcon"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:contentDescription="@string/img_description_des"
                    android:src="@drawable/ic_document" />

                <TextView
                    android:id="@+id/description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/movieName"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_4sdp"
                    android:layout_toRightOf="@+id/desIcon"
                    android:ellipsize="end"
                    android:fontFamily="@font/avenir_next_regular"
                    android:maxLines="2"
                    android:text="@{data.description}"
                    android:textColor="@color/paleLavender"
                    android:textSize="@dimen/_10ssp"
                    tools:text="MovieDescriptionMovieDescriptionMovieDescriptionMovieDescriptionMovieDescription" />

                <ImageView
                    android:tint="@color/paleLavender"
                    android:id="@+id/rateIcon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_below="@+id/desIcon"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:contentDescription="@string/img_description_des"
                    android:src="@drawable/ic_podium" />


                <RatingBar
                    android:progressBackgroundTint="@color/Gray_8"
                    android:progressTint="@color/my_red"
                    android:id="@+id/rate"
                    style="@style/Base.Widget.AppCompat.RatingBar.Small.MyRatingBar"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/description"
                    android:layout_marginLeft="@dimen/_5sdp"
                    android:layout_marginTop="@dimen/_8sdp"
                    android:layout_toRightOf="@+id/rateIcon" />


                <ImageView
                    android:tint="@color/paleLavender"
                    android:id="@+id/peoplesIcon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_below="@+id/rateIcon"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:contentDescription="@string/img_description_des"
                    android:src="@drawable/ic_group" />


                <TextView
                    android:id="@+id/playersCount"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/rate"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_toRightOf="@+id/peoplesIcon"
                    android:ellipsize="end"
                    android:fontFamily="@font/avenir_next_regular"
                    android:maxLines="2"
                    android:textColor="@color/paleLavender"
                    android:textSize="@dimen/_10ssp"
                    tools:text="12000" />


                <ImageView
                    android:tint="@color/paleLavender"
                    android:id="@+id/genreIcon"
                    android:layout_width="@dimen/_18sdp"
                    android:layout_height="@dimen/_18sdp"
                    android:layout_below="@+id/peoplesIcon"
                    android:layout_marginTop="@dimen/_6sdp"
                    android:contentDescription="@string/img_description_des"
                    android:src="@drawable/ic_video" />


                <TextView
                    android:text="@{data.genre.genreName}"
                    android:id="@+id/genreName"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/playersCount"
                    android:layout_marginLeft="@dimen/_8sdp"
                    android:layout_marginTop="@dimen/_12sdp"
                    android:layout_toRightOf="@+id/peoplesIcon"
                    android:ellipsize="end"
                    android:fontFamily="@font/avenir_next_regular"
                    android:maxLines="2"
                    android:textColor="@color/paleLavender"
                    android:textSize="@dimen/_10ssp"
                    tools:text="Game" />


            </RelativeLayout>


            <ImageView
                android:scaleType="fitXY"
                android:id="@+id/imgGenre"
                loadImage="@{data.genre.genreImage}"
                android:layout_width="@dimen/_90sdp"
                android:layout_height="@dimen/_140sdp"
                android:alpha="0.1"
                android:contentDescription="@string/img_genre_des"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <View
                android:id="@+id/viewSep"
                app:layout_constraintBottom_toBottomOf="parent"
                android:background="@color/paleLavender"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_3sdp"/>

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.cardview.widget.CardView>


</layout>

